<resources>
    <string name="app_name">OtterBots Rock Paper Scissors</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_title">Welcome to\nOtterBot\nRock Paper Scissors\n\nPlease Sign In</string>
    <string name="welcome_username">Welcome\nuserName</string>
    <string name="wins">Wins:</string>
    <string name="losses">Losses:</string>
    <string name="ties">Ties:</string>
    <string name="current_streak">Current Streak:</string>
    <string name="max_streak">Max Streak:</string>
    <string name="games_played">Games Played:</string>

    <string name="start_new_game">Start New Game</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="logout">Logout</string>
    <string name="welcome_admin_otterbot">Welcome\nAdmin OtterBot</string>
    <string name="add_user">Add User</string>
    <string name="game_play">Game Play</string>
    <string name="result">Result:</string>
    <string name="you_chose">You Chose:</string>
    <string name="npc_chose">NPC Chose:</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>

    <string name="you_win">YOU WIN!</string>
    <string name="npc_wins">NPC WINS :(</string>
    <string name="it_s_a_tie">IT\'S A TIE</string>
    <string name="you_lose">YOU LOSE :(</string>

    <string name="welcome_user">Welcome\n%s</string>
    <string name="welcome_admin">Welcome\nOtterBot %s</string>
    <string name="default_player_name">Player</string>
    <string name="toast_start_new_game_user">Start New Game (user)</string>
    <string name="toast_view_leaderboard_user">View Leaderboard (user)</string>
    <string name="toast_start_new_game_admin">Start New Game (admin)</string>
    <string name="toast_view_leaderboard_admin">View Leaderboard (admin)</string>
    <string name="toast_add_user_admin">Add User (admin)</string>
    <string name="error_username_blank">Username should not be blank.</string>
    <string name="error_password_blank">Password should not be blank.</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="return_to_main">Return to Main</string>
    <string name="rank">Rank</string>

    <string name="confirm_password">Confirm password</string>
    <string name="register_activity_title">Welcome to OtterBot Rock Paper Scissors.\n\nPlease register a username and password</string>
    <string name="register">Register</string>
    <string name="username_must_not_be_blank">Username must not be blank</string>
    <string name="password_must_not_be_blank">Password must not be blank</string>
    <string name="password_confirmation_must_match">Password confirmation must match</string>
    <string name="return_to_login">Return to login</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="delete_users">Delete Users</string>
    <string name="delete_user_admin">Delete User (admin)</string>
    <string name="delete_user">Delete User</string>
    <string name="Return">Return</string>
    <string name="confirm_username">Confirm Username</string>
    <string name="userid">UserId</string>
    <string name="isadmin">IsAdmin</string>
    <string name="rock_uppercase">ROCK</string>
    <string name="paper_uppercase">PAPER</string>
    <string name="scissors_uppercase">SCISSORS</string>
    <string name="new_user_details">New User Details</string>
    <string name="enter_username_and_password">Enter Username and Password</string>
    <string name="update_username_and_password">Update Username and Password</string>
    <string name="current_username">Current Username:</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_user_details">Update User Details</string>
    <string name="change_user_details">Change User Details</string>
    <string name="reset_user_stats">Reset User Stats</string>
    <string name="reset_stats_warning">This will reset your wins, losses, ties, and streaks to 0.</string>
    <string name="confirm_reset">Reset User Stats</string>
    <string name="stats_title">Stats</string>
</resources>