<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  style="@style/ScreenRoot"
  tools:context=".UpdateUserDetails">

  <Button
    android:id="@+id/UpdateButton"
    style="@style/PrimaryButton"
    android:text="@string/update_user_details"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ConfirmPassword" />

  <EditText
    android:id="@+id/NewPassword"
    style="@style/PrimaryInput"
    android:hint="@string/new_password"
    android:inputType="textPassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/NewUsername" />

  <EditText
    android:id="@+id/ConfirmPassword"
    style="@style/PrimaryInput"
    android:hint="@string/confirm_new_password"
    android:inputType="textPassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/NewPassword" />

  <EditText
    android:id="@+id/NewUsername"
    style="@style/PrimaryInput"
    android:hint="@string/new_username"
    android:inputType="textPersonName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/CurrentUsername" />

  <TextView
    android:id="@+id/Title"
    style="@style/PrimaryTitle"
    android:text="@string/update_username_and_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/CurrentUsername"
    style="@style/StatLabel"
    android:text="@string/current_username"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/Title" />

  <TextView
    android:id="@+id/ReturnButton"
    style="@style/ClickableText"
    android:text="@string/return_to_main"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/UpdateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>