<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenRoot"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/titleRegisterTextView"
        style="@style/PrimaryTitle"
        android:text="@string/register_activity_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameRegisterEditText"
        style="@style/PrimaryInput"
        android:autofillHints="username"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleRegisterTextView" />

    <EditText
        android:id="@+id/passwordRegisterEditText"
        style="@style/PrimaryInput"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameRegisterEditText" />

    <EditText
        android:id="@+id/passwordConfirmRegisterEditText"
        style="@style/PrimaryInput"
        android:autofillHints="confirm password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordRegisterEditText" />

    <Button
        android:id="@+id/registerButton"
        style="@style/PrimaryButton"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmRegisterEditText" />

    <!-- back to login -->
    <TextView
        android:id="@+id/backToLoginTextView"
        style="@style/ClickableText"
        android:text="@string/return_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>