<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".GamePlayActivity">

    <!--Game Play Title-->
    <TextView
        android:id="@+id/gameplayTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_play"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Gameplay feed  -->
    <TextView
        android:id="@+id/resultLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/result"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameplayTitleTextView" />


    <TextView
        android:id="@+id/resultOutputTextView"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:padding="8dp"
        android:textSize="18dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/resultLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/resultLabelTextView" />

    <TextView
        android:id="@+id/youChoseLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/you_chose"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultLabelTextView"
        />

    <TextView
        android:id="@+id/youChoseOutputTextView"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:padding="8dp"
        android:textSize="18dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/youChoseLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/youChoseLabelTextView" />


    <TextView
        android:id="@+id/npcChose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text="@string/npc_chose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youChoseLabelTextView"
        />

    <TextView
        android:id="@+id/npcChoseOutputTextView"
        android:layout_width="273dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:padding="8dp"
        android:textSize="18dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/npcChose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/npcChose" />


    <!-- User play button -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1"
        android:id="@+id/buttonGridView"
        app:layout_constraintTop_toBottomOf="@+id/npcChoseOutputTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageButton
            android:id="@+id/rockPlayButton"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="120dp"
            android:src="@drawable/ic_rock"
            />

        <ImageButton
            android:id="@+id/paperPlayButton"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="120dp"
            android:src="@drawable/ic_paper"
            />

        <ImageButton
            android:id="@+id/scissorsPlayButton"
            android:text="@string/scissors"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_width="120dp"
            android:src="@drawable/ic_scissors"
            />

    </GridLayout>

    <TextView
        android:id="@+id/returnSelectableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="5dp"
        android:text="Return"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGridView"
       />

    <!-- History -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gameHistoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="never"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnSelectableTextView"
        tools:listitem="@layout/game_history_recycler_item" />



</androidx.constraintlayout.widget.ConstraintLayout>